[package]
name = "luminos-container"
version = "0.1.0"
edition = "2024"
authors = ["Joseph Raub <joseph@raubstudios.com>"]
description = "Luminos Container"
repository = "https://github.com/RaubJo/luminos-container"
license = "MIT"

[dependencies]
luminos-contracts = { path = "../Contracts", version = "0.1.0"} 

[lints.rust]
dead_code = "allow"
unused = "allow"
